@@ -1,14 +1,14 @@
 {
-  "timestamp" : "2022-06-01T00:33:05Z",
-  "count_outdated" : 383,
-  "uniques_outdated" : 80,
-  "count" : 384,
-  "uniques" : 81,
+  "timestamp" : "2022-06-07T00:23:23Z",
+  "count_outdated" : 384,
+  "uniques_outdated" : 81,
+  "count" : 387,
+  "uniques" : 82,
   "views" : [
     {
-      "timestamp": "2022-05-21T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "timestamp": "2022-06-06T00:00:00Z",
+      "count": 3,
+      "count_minmax": [ 3, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
